--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "2.8.1",
     "next": "9.1.6",
     "react": "16.12.0",
     "react-dom": "16.12.0"
