--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/swr": "0.1.2",
     "date-fns": "2.8.1",
+    "isomorphic-unfetch": "3.0.0",
     "next": "9.1.6",
     "react": "16.12.0",
     "react-dom": "16.12.0"
