--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "build:icons": "svgr --ext tsx -d icons icons"
   },
   "dependencies": {
-    "@zeit/swr": "0.1.2",
     "date-fns": "2.8.1",
     "isomorphic-unfetch": "3.0.0",
     "next": "9.1.6",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "swr": "0.1.15"
   },
   "devDependencies": {
     "@svgr/cli": "4.3.3",
