--- a/package.json
+++ b/package.json
@@ -6,20 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "build:icons": "svgr --ext tsx -d icons icons"
+    "build:icons": "svgr --ext tsx -d icons icons",
+    "generate": "gql-gen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/react-hooks": "3.1.3",
+    "apollo-cache-inmemory": "1.6.5",
+    "apollo-client": "2.6.8",
     "date-fns": "2.8.1",
     "isomorphic-unfetch": "3.0.0",
     "next": "9.1.6",
     "react": "16.12.0",
+    "react-apollo": "3.1.3",
     "react-dom": "16.12.0",
     "swr": "0.1.15"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "1.10.0",
+    "@graphql-codegen/typescript": "1.10.0",
+    "@graphql-codegen/typescript-operations": "1.10.0",
+    "@graphql-codegen/typescript-react-apollo": "1.10.0",
     "@svgr/cli": "4.3.3",
     "@types/node": "12.12.21",
     "@types/react": "16.9.17",
+    "graphql": "14.5.8",
     "typescript": "3.7.4"
   }
 }
