--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "graphql-auth",
   "license": "MIT",
+  "engines": { "node": "12.x" },
   "scripts": {
     "start": "node dist/server",
     "clean": "rm -rf dist",
