--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "work-timer-next",
   "version": "0.1.0",
   "private": true,
+  "engines": { "node": "12.x" },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
