--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,9 @@
   "name": "work-timer-next",
   "version": "0.1.0",
   "private": true,
-  "engines": { "node": "12.x" },
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -30,6 +32,7 @@
     "@svgr/cli": "4.3.3",
     "@types/node": "12.12.21",
     "@types/react": "16.9.17",
+    "dotenv": "8.2.0",
     "graphql": "14.5.8",
     "typescript": "3.7.4"
   }
