--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "3.1.3",
+    "@types/lodash": "4.14.149",
     "apollo-cache-inmemory": "1.6.5",
     "apollo-client": "2.6.8",
     "date-fns": "2.8.1",
+    "formik": "2.1.1",
     "isomorphic-unfetch": "3.0.0",
+    "lodash": "4.17.15",
     "next": "9.1.6",
     "react": "16.12.0",
     "react-apollo": "3.1.3",
